cmake_minimum_required(VERSION 3.12)
set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
set(PICO_SDK_INIT_CMAKE_FILE ${PICO_SDK_PATH}/pico_sdk_init.cmake)
include(${PICO_SDK_INIT_CMAKE_FILE})
project(ultrasonic_robot)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_compile_options(-Wall -Wno-format -Werror)
aux_source_directory(src SOURCE_LIST)
add_executable(ultrasonic_robot ${SOURCE_LIST})
target_link_libraries(ultrasonic_robot pico_stdlib)
pico_add_extra_outputs(ultrasonic_robot)
